fix containers alignment center in show budget view and adjusted goal container size.

--- a/public/stylesheets/budgets/show.css
+++ b/public/stylesheets/budgets/show.css
@@ -8,7 +8,7 @@
 .expense-field-container {
   display: flex;
   justify-content: space-evenly;
-  width: 100%;
+  align-items: center;
 }
 
 #title {
@@ -36,13 +36,16 @@
 .goal-container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
   border: solid #2a2828;
   border-radius: 6px;
   box-shadow: 10px 10px 5px;
   padding: 20px;
+  flex-wrap: wrap;
+  max-width: 200px;
+  height: 250px;
 }
 #goal-show {
   font-weight: bold;
@@ -50,6 +53,7 @@
 }
 
 #purpose-show {
+  padding: 20px;
   font-size: 18px;
 }
 
